# Rusty-Do

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/app/: actions.rs  input.rs  mod.rs
src/models/: mod.rs  notebook.rs  subtask.rs  task.rs
src/storage/: mod.rs  paths.rs  persistence.rs
src/ui/: confirm.rs  help.rs  inspect_window.rs  mod.rs  notebook_detail.rs  overview.rs  rename.rs  task_column.rs  theme.rs
