[package]
name = "rusty-do"
version = "1.3.2"
edition = "2024"
authors = ["Quippy22"]
description = "A minimal, Vim-inspired terminal planner with hierarchical task organization."
license = "MIT"
repository = "https://github.com/Quippy22/Rusty-Do"
homepage = "https://github.com/Quippy22/Rusty-Do/releases"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["tui", "todo", "vim", "task-manager"]

[[bin]]
name = "rsdo"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4"] }
